--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,34 @@
+@import url('https://rsms.me/inter/inter.css');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
 html,
-body {
-  padding: 0;
+body,
+main,
+#root {
+  width: 100%;
+  height: 100%;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  padding: 0;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+body {
+  font-family: inter;
+  color: black;
 }
 
-* {
-  box-sizing: border-box;
+.home-page-header {
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  top: 36%;
+  left: 50%;
+  transform: translate3d(-50%, -50%, 0);
+  font-weight: 600;
+  text-align: center;
+  letter-spacing: -0.075em;
+  white-space: nowrap;
 }
